added shared memory based fake ethernet port

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "lib.h": "c",
         "netif.h": "c",
         "if.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "shm_eth.h": "c"
     }
 }
